syntax = "proto3";

package kr.ac.postech.paranode.rpc;

import "common.proto";

service Master {
    rpc Register (RegisterRequest) returns (RegisterReply) {}
}

message RegisterRequest {
    Node worker = 1;
}

message RegisterReply {}
